# waveshare-7in5v2-rs

./: Cargo.toml  LICENSE  README.md  config.toml
src/: converter.rs  lib.rs  main.rs  rpi_helper.rs  util.rs
src/epd/: epd7in5_v2.rs  mod.rs  types.rs
src/epd_configs/: epd2in9d.rs  epd5in83_v2.rs  epd7in5_v2.rs  mod.rs
