[package]
name = "waveshare-rpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
image = "0.24.7"
log = "0.4.20"
ril = { version = "0.9.0", default-features = false }
rppal = "0.14.1"
simple_logger = "4.2.0"

[features]
default = ["ril/all", "ril/text", "ril/jpeg"]
